--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,4 @@
-1.0.1 -> 1.0.2
+1.1.1 -> 1.1.2
 
-- com.mysema.querydsl:querydsl-jpa dependency updated from version 2.6.0 to 2.9.0
+    - Dependencies update: QueryDSL 3.3.3 will be used from now on, deprecated junit-dep replaced with junit
+    - Generic Type of Results changed to avoid problems with generic types intersection
